tests/negative/runtime/err_undefined_stack.ual
-- Runtime error test: undefined stack
@nonexistent push(1)
